adding ability to add and remove items from basket

--- a/amazon-clone/src/components/Product.css
+++ b/amazon-clone/src/components/Product.css
@@ -29,6 +29,7 @@
     margin-top: 10px;
     border-color: #a88734 #9c7e31 #846a29;
     color: #111;
+    border-radius: 4px;
 }
 
 .product__info {
